# xjf-pentagi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  patch_ui.py  pyproject.toml
config/: modules.yaml  pipelines.yaml  scope.example.yaml  scope.yaml  tools.yaml
labs/pikachu/: Dockerfile  README.md  docker-compose.yml  init.sql  write_pikachu_assets.py
src/xjf_pentagi/: __init__.py  __main__.py  automation.py  cli.py  fsenc.py  llm_compat.py  nl_chat.py  phases.py  pipelines.py  planner.py  registry.py  runner.py  scope.py  targets.py  web_app.py
src/xjf_pentagi/static/: index.html
